[metadata]
name = robophery
summary = Python library for interfacing low level hardware sensors and actuators with MQTT bindings.
description-file =
    README.rst
author = Ales Komarek
author-email = ales.komarek@newt.cz
home-page = http://www.github.cz/cznewt/robophery
classifier =
    Environment :: Linux
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    robophery

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
